--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="RAOKE-APP/style.css" />
 
     <title>Rose's WeatherApp</title>
   </head>
@@ -100,6 +100,6 @@
         </div>
       </div>
     </div>
-    <script src="src/index.js"></script>
+    <script src="RAOKE-APP/index.js"></script>
   </body>
 </html>
